# roxene

./: .gitignore  Cell.py  ConnectNeurons.py  CreateNeuron.py  CreatePerceptron.py  Dockerfile  Gene.py  InputCell.py  Neuron.py  Organism.py  Perceptron.py  Pipfile  README.md  RotateCells.py  pyproject.toml  pytest.ini
notebooks/: training.ipynb  wiggle.ipynb
roxene/: Cell.py  ConnectNeurons.py  CreateNeuron.py  Gene.py  InputCell.py  Neuron.py  Organism.py  RotateCells.py  __init__.py  cells.py  constants.py  core.py  genes.py  mutagens.py  organism.py  util.py
tests/: AddConnectNeurons_test.py  AddConnectionMutagen_test.py  AddConnection_test.py  CompositeGeneSplitMutagen_test.py  CompositeGene_test.py  ConnectNeurons_test.py  CreateInputCell_test.py  CreateNeuronMutagen_test.py  CreateNeuron_test.py  CreatePerceptron_test.py  DuplicateGeneMutagen_test.py  DuplicateGene_test.py  InputCell_test.py  ModifyConnectionMutagen_test.py  ModifyConnection_test.py  ModifyInitialValueMutagen_test.py  ModifyInitialValue_test.py  ModifyIterationsMutagen_test.py  ModifyIterations_test.py  ModifyWeightMutagen_test.py  ModifyWeight_test.py  Mutagen_persistence_test.py  Mutagen_test.py  Mutagens_test.py  NarrowLayerMutagen_test.py  Neuron_test.py  Organism_test.py  Perceptron_test.py  Persistence_test.py  PushDownMutagen_test.py  PushDown_test.py  RemoveGeneMutagen_test.py  RemoveGene_test.py  ResizeNeuronLayerMutagen_test.py  ResizeNeuronLayer_test.py  RetargetConnectNeurons_test.py  RotateCells_test.py  ShuffleGenesMutagen_test.py  ShuffleGenes_test.py  SplitCompositeGene_test.py  (+4 more)
(+92 files in other folders)
