[project]
name = "roxene"
version = "0.1.0"
description = "A genetic algorithm project for evolving neural networks"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.23.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "parameterized>=0.8.0",
    "notebook>=6.0.0",
    "matplotlib>=3.5.0",
    "testcase>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/roxene"]

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
filterwarnings = [
    "ignore::DeprecationWarning",
]
log_cli = true
log_cli_level = "DEBUG"
log_cli_format = "%(asctime)s - %(levelname)s - %(name)s - %(message)s"
log_date_format = "%H:%M:%S.%f"
